# SComplex_Visualization

./: CMakeLists.txt  main.cpp  scomplex.txt
OpenGLs/: CMakeLists.txt
src/: scomplex.cpp  scomplex.hpp  shader.cpp  shader.hpp
src/shaders/: basicFragment.glsl  basicVertex.glsl
